[package]
name = "say-number"
version = "0.1.0"
authors = ["Do Nhat Minh <minhnhdo@gmail.com>"]
edition = "2018"
description = "Library to say number in English"
keywords = ["say", "number"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/minhnhdo/say-number"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
phf = { version = "0.8", features = ["macros"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
