[package]
name = "say-number"
version = "0.1.1"
authors = ["Do Nhat Minh <minhnhdo@gmail.com>"]
edition = "2018"
description = "Library to say number in English"
keywords = ["say", "number", "english"]
categories = ["natural-language"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/minhnhdo/say-number"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"

[dev-dependencies]
criterion = "0.3"

[[test]]
name = "english"

[[bench]]
name = "english"
harness = false
