[package]
name = "say-number"
version = "0.1.4"
authors = ["Do Nhat Minh <minhnhdo@gmail.com>", "Katie Tran <thytrannk@gmail.com>"]
edition = "2018"
description = "Library to say numbers in English, French and Vietnamese"
keywords = ["say", "number", "english", "french", "vietnamese"]
categories = ["internationalization", "localization", "value-formatting"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/minhnhdo/say-number"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"

[dev-dependencies]
criterion = "0.3"

[[test]]
name = "english"

[[test]]
name = "french"

[[test]]
name = "chinese_simplified"

[[test]]
name = "vietnamese"

[[bench]]
name = "english"
harness = false

[[bench]]
name = "french"
harness = false

[[bench]]
name = "vietnamese"
harness = false
